--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-pi",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": false,
   "description": "graphql play instance",
   "main": "index.js",
@@ -18,35 +18,35 @@
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-prettystream": "^0.1.3",
-    "commander": "^2.20.0",
+    "commander": "^4.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
-    "ejs": "^2.6.2",
-    "email-templates": "^6.0.0",
+    "ejs": "^3.0.1",
+    "email-templates": "^6.1.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "14.4.2",
+    "graphql": "14.5.8",
     "graphql-subscriptions": "^1.1.0",
-    "graphql-upload": "^8.0.7",
+    "graphql-upload": "^9.0.0",
     "jsonwebtoken": "^8.5.1",
-    "juice": "^5.2.0",
-    "knex": "^0.19.0",
+    "juice": "^6.0.0",
+    "knex": "^0.20.7",
     "knex-hooks": "0.0.6",
     "memcached": "^2.2.2",
-    "mongodb": "^3.2.7",
+    "mongodb": "^3.4.1",
     "multer": "^1.4.2",
-    "pg": "^7.11.0",
+    "pg": "^7.17.0",
     "subscriptions-transport-ws": "^0.9.16",
-    "uuid": "^3.3.2",
-    "web3": "1.0.0-beta.48"
+    "uuid": "^3.3.3",
+    "web3": "1.2.4"
   },
   "engines": {
     "node": ">=10.0.0"
   },
   "devDependencies": {
-    "eslint": "^6.0.1"
+    "eslint": "^6.8.0"
   },
   "bin": {
     "graphql-pi": "./bin/graphql-pi.js"
