--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "bignumber.js": "^9.0.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-prettystream": "^0.1.3",
@@ -39,11 +38,10 @@
     "multer": "^1.4.2",
     "pg": "^7.17.0",
     "subscriptions-transport-ws": "^0.9.16",
-    "uuid": "^3.3.3",
-    "web3": "1.2.4"
+    "uuid": "^3.3.3"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=11.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
