fix: adicionando configurações para pool do database

--- a/.env
+++ b/.env
@@ -21,6 +21,8 @@ POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_DATABASE=
 POSTGRES_LOG=on
+POSTGRES_POOL_MIN=2
+POSTGRES_POOL_MAX=10
 
 MONGO=off
 MONGO_USERNAME=app
